# REFAL-5-COMPILER

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ast_run2.txt  test_self_host_complex.ref
.github/workflows/: ci.yml
crates/refal-ast/: Cargo.toml
crates/refal-ast/src/: lib.rs
crates/refal-cli/: Cargo.toml
crates/refal-cli/src/: main.rs
crates/refal-cli/tests/: check_examples.rs
crates/refal-runtime/: Cargo.toml
crates/refal-runtime/src/: interpreter.rs  lib.rs  matcher.rs  value.rs
crates/refal-semantics/: Cargo.toml
crates/refal-semantics/src/: lib.rs
crates/refal-syntax/: Cargo.toml
crates/refal-syntax/src/: lexer.rs  lib.rs  parser.rs
docs/: ARCHITECTURE.md  CLEANROOM.md  FRONTEND-COVERAGE.md  LANGUAGE-SCOPE.md  PRODUCTION-COMPLETION.md  ROADMAP.md  SEMANTIC-AUDIT.md
examples/: bad-call-in-pattern.ref  bad-condition-unbound-variable.ref  bad-duplicate-extern.ref  bad-duplicate-function.ref  bad-empty-function.ref  bad-lowercase-identifier.ref  bad-malformed-real.ref  bad-missing-entry.ref  bad-multiple-entry.ref  bad-unbound-variable.ref  bad-unresolved-call.ref  bad-variable-kind-conflict.ref  classic-syntax.ref  condition.ref  extern-equivalence.ref  extern.ref  hello.ref  identity.ref  runtime-condition.ref  runtime-unimplemented-extern.ref
prompts/: prompt_for_jules.md
specs/: refal5_compiler_specs.md
src/lsp/: Cargo.toml
src/lsp/src/: main.rs
src/refal/: compiler.ref  compiler_core.ref  evaluator.ref  lexer.ref  lexer_test.ref  parser.ref
src/seed/: Cargo.toml
src/seed/src/: ast.rs  (+5 more)
