[workspace]
members = [
    "crates/refal-ast",
    "crates/refal-syntax",
    "crates/refal-semantics",
    "crates/refal-runtime",
    "crates/refal-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Abhinav-Rust/REFAL-5-COMPILER"
authors = ["Abhinav"]

[workspace.lints.rust]
unsafe_code = "forbid"
