[package]
name = "refal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
refal-ast = { path = "../refal-ast" }
refal-runtime = { path = "../refal-runtime" }
refal-semantics = { path = "../refal-semantics" }
refal-syntax = { path = "../refal-syntax" }

[[bin]]
name = "refal"
path = "src/main.rs"

[lints]
workspace = true
